<resources>
    <string name="app_name">Movie Collection</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now playing</string>
    <string name="item_naming">Naming</string>
    <string name="release_date">Release date</string>
    <string name="rating">rating</string>
    <string name="rec_view_play">Now Playing</string>
    <string name="search_menu_item">search</string>
    <string name="genre">Genre</string>
    <string name="duration">Duration</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="description">Description</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="ratings">Ratings</string>
    <string name="popularity">Popularity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Settings</string>
    <string name="sync_header">Content</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>

    <!-- Sync Preferences -->
    <string name="attachment_title">Adult content</string>
    <string name="attachment_summary_off">Show adult content</string>
    <string name="attachment_summary_on">Hide adult content</string>
    <string name="settings_menu">settings_menu</string>
</resources>