<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_come"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation"
    app:cardBackgroundColor="@color/black">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_come"
            android:layout_width="@dimen/item_width"
            android:layout_height="@dimen/item_height"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/cinematografico" />

        <TextView
            android:id="@+id/title_upcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/item_naming"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/date_upcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/release_date"
            android:textSize="@dimen/release_date" />

        <TextView
            android:id="@+id/genre_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/popularity"
            android:textSize="@dimen/release_date"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.cardview.widget.CardView>



